# OpenMixer

./: .gitignore  CMakeLists.txt  build.sh  install.sh  openmixer.pro  openmixer_linux.pro  qml.cmd  readme.md
Resources/: shared.qrc
Resources/qml/: Main.qml  MainContent.qml  Splash.qml
Resources/qml/Components/: DialogPopup.qml  EffectTrackItem.qml  ErrorDialog.qml  Header.qml  SignalOverview.qml  Test.qml  TrackItems.qml  TrackView.qml
Resources/qml/Pages/: Loading.qml  MixerView.qml  MixerView2.qml  Patch.qml  Root.qml
src/: main.cpp
src/core/: powerbutton.cpp  powerbutton.hpp  systemmonitor.cpp  systemmonitor.hpp  systemprocess.cpp  systemprocess.hpp
src/gui/: app.cpp  app.hpp
